fix: update select multiple selection item background color for improved contrast

--- a/components/style/themes/default.less
+++ b/components/style/themes/default.less
@@ -540,7 +540,7 @@
 @select-border-color-active: #5c43fd;
 @select-multiple-remove-icon-color: #484653;
 @select-multiple-selection-item-color: #18171c;
-@select-multiple-selection-item-bg: #e4e3e8;
+@select-multiple-selection-item-bg: #f1f1f3;
 
 // Datepicker
 @datepicker-bg: #ffffff;
